HW18. Finish task 4. Improvements for other tasks